--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,3 +1,20 @@
 spring:
   kafka:
-    bootstrap-servers: "localhost:19092"
+    bootstrap-servers:  "localhost:9092"
+    producer:
+      value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
+      properties:
+        spring:
+          json:
+            type:
+              mapping:  "visitorDto:ru.km.kafka.conference.dto.VisitorDto"
+    consumer:
+      auto.offset.reset:  earliest
+      value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
+      properties:
+        spring:
+          json:
+            type:
+              mapping:  "visitorDto:ru.km.kafka.conference.dto.VisitorDto"
+topic: "topic"
+group: "group"
